--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://zen-lewin-1d2a50.netlify.app/"
+baseurl = "/"
 languageCode = "en-us"
 title = "Anthony's blog"
 theme = "hugo-xmin"
@@ -9,7 +9,6 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
 [permalinks]
     post = "/:year/:month/:day/:slug/"
-    note = "/note/:year/:month/:day/:slug/"
     
 [social]
     github = "https://github.com/achau713"
