--- a/config.toml
+++ b/config.toml
@@ -9,6 +9,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
 [permalinks]
     post = "/:year/:month/:day/:slug/"
+    note = "/note/:year/:month/:day/:slug/"
     
 [social]
     github = "https://github.com/achau713"
@@ -22,17 +23,13 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     url = "/about/"
     weight = 2
 [[menu.main]]
-    name = "Blog"
-    url = "/blog/"
-    weight = 3
-[[menu.main]]
     name = "Categories"
     url = "/categories/"
-    weight = 4
+    weight = 3
 [[menu.main]]
     name = "Tags"
     url = "/tags/"
-    weight = 5
+    weight = 4
 
 [params]
     description = "Blog sharing about statistics, programming, food, and more"
