remove default files

--- a/config.toml
+++ b/config.toml
@@ -32,5 +32,5 @@ footnotereturnlinkcontents = "↩"
     url = "/index.xml"
 
 [params]
-    description = "A website built through Hugo and blogdown."
-    footer = "&copy; [Yihui Xie](https://yihui.name) 2017 -- 2019 | [Github](https://github.com/yihui) | [Twitter](https://twitter.com/xieyihui)"
+    description = "A blog website discussing statistics, mathematics, pedagogy, food, and more"
+    footer = "&copy; Anthony Chau 2020 [Github](https://github.com/achau713)"
