--- a/config.toml
+++ b/config.toml
@@ -28,8 +28,9 @@ footnotereturnlinkcontents = "↩"
     url = "/tags/"
     weight = 4
 [[menu.main]]
-    name = "Subscribe"
-    url = "/index.xml"
+    name = "UCI Center for Statistical Consulting"
+    url = "https://statconsulting.uci.edu/"
+    weight = 5
 
 [params]
     description = "A blog website discussing statistics, mathematics, pedagogy, food, and more"
