--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseurl = "/"
 languageCode = "en-us"
 title = "Anthony's Blog"
 theme = "hugo-xmin"
-googleAnalytics = ""
+googleAnalytics = "UA-101901871-2"
 disqusShortname = ""
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 footnotereturnlinkcontents = "↩"
